# i19n

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
i19n/: __init__.py  config.py  utils.py
